# sunny-robot-manager

./: README.md
core/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
core/cad_reader/: CMakeLists.txt  cadreader.cpp  cadreader.h  dx_data.h  dx_iface.cpp  dx_iface.h
core/cad_reader/dxfrw/: CMakeLists.txt  drw_base.cpp  drw_base.h  drw_entities.cpp  drw_entities.h  drw_header.cpp  libdwgr.cpp  libdxfrw.cpp
core/cad_reader/dxfrw/intern/: drw_textcodec.cpp  drw_textcodec.h  dwgbuffer.cpp  dwgbuffer.h  dwgreader.cpp  dwgreader.h  dwgreader18.cpp  dwgreader21.cpp  dwgutil.cpp
core/common/: CMakeLists.txt  FileReadWrite.h  Thread.hpp  Tools.h  common.h  vector2.h
core/config/: Untitled-1.json  background.dwg  background.dxf  chassis_info.json  fff.roadmap  fpg.json  joipjoij.json  office.json  roadmap.json  roadmap_1208.json  test.json  test.json_  test06.json  test1208.json  test2.json  test4.json  test5.json  test_add_line.json  test_bezier.json
core/js/: CaliTask.js  Common.js  Draw.js
core/pcd_reader/: CMakeLists.txt  qpointcloud.cpp  qpointcloud.h  qpointcloudgeometry.cpp  qpointfield.cpp  qpointfield.h
core/qml/BasicComponent/: TTextInput.qml
core/qml/Calibration/: CaliInput.qml  ChassisChartView.qml  ChassisInfoView.qml  OdomInfoView.qml  UMBmarkInputView.qml
core/qml/Config/: CalibrationConfig.qml  CanvasConfig.qml  IconConfig.qml  MainConfig.qml
core/qml/Data/: CadData.qml  RoadmapData.qml
core/qml/LocalTask/: TaskDebug.qml
core/qml/MainTools/: ConnectDialog.qml  MainFileDialog.qml  MainMenuBar.qml  MainStatusBar.qml  MessageBox.qml  RouteDesignToolBar.qml
core/qml/RouteDesign/: MainCanvas.qml  MainPropHeader.qml  MainPropView.qml  MainTreeHeader.qml  MainTreeView.qml
core/qml/TaoQuick/Qml/: CusConfig.qml
core/qml/pcd/: AdsMaterial.qml  GroundPlane.qml  PointCloudViewer.qml  SideConfiguration.qml
core/roadmap_manager/: BaseListModel.h  BaseListModel.inl  CMakeLists.txt  RoadmapJsonTreeModel.cpp  RoadmapJsonTreeModel.h
core/roadmap_manager/route/: CMakeLists.txt  agvpoint.cpp  agvpoint.h  roadmap_data.h  route.cpp  route.h
core/roadmap_manager/route/graph/: CMakeLists.txt  dijkstrasearch.cpp  dijkstrasearch.h  graph.cpp  graph.h  graphroute.cpp  graphroute.h  ipathsearch.cpp  ipathsearch.h  vertex.cpp  vertex.h
core/shader/: pointcloud.frag
